--- a/resources/blueprints/collections/pages/home_page.yaml
+++ b/resources/blueprints/collections/pages/home_page.yaml
@@ -74,6 +74,7 @@ sections:
           type: bard
           icon: bard
           listable: hidden
+          container: assets
   sidebar:
     display: Sidebar
     fields:
