added map to home page

--- a/content/globals/church_information.yaml
+++ b/content/globals/church_information.yaml
@@ -8,6 +8,7 @@ data:
   city: Mattoon
   state: IL
   zip: '61938'
+  map_embed: '<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3079.487588983939!2d-88.37631218385717!3d39.48090331994097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x887311da21abf021%3A0x651894ddc7f642cb!2sFirst%20Christian%20Church!5e0!3m2!1sen!2sus!4v1632777269762!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>'
   ind_services:
     -
       day_of_week: Sunday
