--- a/content/collections/leaders.yaml
+++ b/content/collections/leaders.yaml
@@ -2,7 +2,7 @@ title: Leaders
 template: default
 layout: layout
 revisions: false
-sort_dir: asc
+sort_dir: desc
 date_behavior:
   past: public
   future: private
